<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SetupActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textColor="#14430F"
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email_address"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="100dp"
        android:inputType="textEmailAddress"
        android:id="@+id/etEmaillAddress"/>

    <Spinner
        android:id="@+id/spinnerTimePicker"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_margin="20sp"
        android:text="@string/select_time_zone" />
    <Spinner
        android:id="@+id/spinnerPlantPicker"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_margin="20sp"
        android:text="@string/choose_plant" />

</LinearLayout>