<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backgroundd"
        android:backgroundTint="#80FFFFFF"
        android:backgroundTintMode="src_over"
        android:orientation="vertical"
        tools:context=".MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20sp"
                android:text="@string/check_green_house_condition"
                android:textColor="#2C6A32"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tvTempAndHumid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text="@string/dht11_readings_will_appear_hear"
                android:textColor="#000"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnTempAndHumid"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/dht11" />
            <TextView
                android:id="@+id/tvTankLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/tank_level_will_appear_hear"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnTankLevel"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/tank_level" />

<!--            <TextView-->
<!--                android:id="@+id/tvPHLevel"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="center"-->
<!--                android:padding="10dp"-->
<!--                android:textStyle="bold"-->
<!--                android:text="@string/ph_level_will_appear_hear"-->
<!--                android:textColor="#000"-->
<!--                android:textSize="15sp" />-->

<!--            <Button-->
<!--                android:id="@+id/btnPHLevel"-->
<!--                android:layout_width="200dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:padding="10dp"-->
<!--                android:text="@string/ph_level" />-->

            <TextView
                android:id="@+id/tvMoisture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/moisture_level_will_appear_hear"
                android:textColor="#000"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnMoisTure"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/moisture" />

            <TextView
                android:id="@+id/tvLDR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/check_light_status"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnLDR"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="Check Light Status" />

        </LinearLayout>
</ScrollView>