<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageClassificationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/image_to_be_classified"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="93dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="104dp"
        android:textColor="#2C6A32"
        android:layout_marginBottom="105dp"
        android:text="CHECK PLANT HEALTH"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/classify_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/image_to_be_classified"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/click_below_to_select_a_image"
        android:textSize="20sp"
        android:textStyle="bold">

    </TextView>

    <ImageView
        android:id="@+id/image_to_be_classified"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="#D8D8D8" />

    <Button
        android:id="@+id/btn_classify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_to_be_classified"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:background="#fff"
        android:text="@string/classify"
        android:textColor="#fff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_classify"
        android:layout_centerHorizontal="true"
        android:text="@string/press_back_button_to_return_to_the_main_menu"
        android:textSize="15sp"
        android:textColor="#8E8E8E"
        android:textStyle="bold"
        tools:ignore="SmallSp" />
</RelativeLayout>